--- a/package.json
+++ b/package.json
@@ -1,15 +1,4 @@
 {
-  "name": "adv",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng lint && ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "lint": "ng lint"
-  },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.5",
     "@angular/cdk": "19.0.4",
@@ -40,5 +29,17 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "8.18.2"
-  }
+  },
+  "name": "adv",
+  "private": true,
+  "scripts": {
+    "auto-test": "ng test --browsers=ChromeHeadless --watch=false",
+    "build": "ng lint && ng build",
+    "lint": "ng lint",
+    "ng": "ng",
+    "start": "ng serve",
+    "test": "ng test",
+    "watch": "ng build --watch --configuration development"
+  },
+  "version": "0.0.0"
 }
