--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Cache Node Modules
         uses: actions/cache@v4
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          path: ~/.yarn
+          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
           restore-keys: ${{ runner.os }}-node-
 
       - name: Installing Node ${{ matrix.node-version }}
@@ -30,13 +30,13 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Installing NPM Packages
-        run: npm ci
+        run: yarn --frozen-lockfile
 
       - name: run tests
-        run: npm run auto-test
+        run: yarn auto-test
 
       - name: regular build
-        run: npm run build
+        run: yarn build
 
   dependabot-automerge:
     runs-on: ubuntu-latest
