--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -17,12 +17,16 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Cache Node Modules
-        uses: actions/cache@v4
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
+
+      - uses: actions/cache@v4
+        id: yarn-cache
         with:
-          path: ~/.yarn
-          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: ${{ runner.os }}-node-
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: ${{ runner.os }}-yarn-
 
       - name: Installing Node ${{ matrix.node-version }}
         uses: actions/setup-node@v4
