--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "8.18.2"
   },
+  "packageManager": "yarn@1.22.22",
   "name": "adv",
   "private": true,
   "scripts": {
