--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
   "dependencies": {
     "@angular/animations": "^19.0.5",
-    "@angular/cdk": "19.0.4",
+    "@angular/cdk": "^19.0.4",
     "@angular/common": "^19.0.5",
     "@angular/compiler": "^19.0.5",
     "@angular/core": "^19.0.5",
     "@angular/forms": "^19.0.5",
-    "@angular/material": "19.0.4",
+    "@angular/material": "^19.0.4",
     "@angular/platform-browser": "^19.0.5",
     "@angular/platform-browser-dynamic": "^19.0.5",
     "@angular/router": "^19.0.5",
-    "rxjs": "~7.8.1",
+    "rxjs": "^7.8.1",
     "tslib": "^2.8.1",
-    "zone.js": "~0.15.0"
+    "zone.js": "^0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.6",
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.5",
-    "@types/jasmine": "~5.1.5",
-    "angular-eslint": "19.0.2",
+    "@types/jasmine": "^5.1.5",
+    "@types/node": "^22.10.5",
+    "angular-eslint": "^19.0.2",
     "eslint": "^9.17.0",
-    "jasmine-core": "~5.5.0",
-    "karma": "~6.4.4",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.1",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "jasmine-core": "^5.5.0",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "typescript": "~5.6.3",
-    "typescript-eslint": "8.19.1"
+    "typescript-eslint": "^8.19.1",
+    "vite": "^5.4.11"
   },
-  "packageManager": "yarn@1.22.22",
   "name": "adv",
+  "packageManager": "yarn@1.22.22",
   "private": true,
   "scripts": {
     "auto-test": "ng test --browsers=ChromeHeadless --watch=false",
