--- a/angular.json
+++ b/angular.json
@@ -66,30 +66,19 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "development": {
-              "buildTarget": "adv:build:development"
+              "buildTarget": "::development"
             },
             "production": {
-              "buildTarget": "adv:build:production"
+              "buildTarget": "::production"
             }
           },
           "defaultConfiguration": "development"
         },
         "test": {
-          "builder": "@angular/build:karma",
+          "builder": "@angular/build:unit-test",
           "options": {
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
-            "inlineStyleLanguage": "scss",
-            "polyfills": ["zone.js", "zone.js/testing"],
-            "scripts": [],
-            "styles": [
-              "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.scss"
-            ],
+            "buildTarget": "::development",
+            "runner": "vitest",
             "tsConfig": "tsconfig.spec.json"
           }
         }
@@ -105,16 +94,12 @@
       "sourceRoot": "src"
     }
   },
-  "version": 1,
   "schematics": {
     "@schematics/angular:component": {
       "type": "component"
     },
     "@schematics/angular:directive": {
       "type": "directive"
-    },
-    "@schematics/angular:service": {
-      "type": "service"
     },
     "@schematics/angular:guard": {
       "typeSeparator": "."
@@ -130,6 +115,10 @@
     },
     "@schematics/angular:resolver": {
       "typeSeparator": "."
+    },
+    "@schematics/angular:service": {
+      "type": "service"
     }
-  }
+  },
+  "version": 1
 }
