--- a/package.json
+++ b/package.json
@@ -18,19 +18,15 @@
     "@angular/build": "^20.0.2",
     "@angular/cli": "^20.0.2",
     "@angular/compiler-cli": "^20.0.3",
-    "@types/jasmine": "^5.1.8",
     "@types/node": "^24.0.0",
+    "@vitest/browser": "^3.2.3",
     "angular-eslint": "^20.0.0",
     "eslint": "^9.28.0",
-    "jasmine-core": "^5.8.0",
-    "karma": "^6.4.4",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-coverage": "^2.2.1",
-    "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.1.0",
+    "jsdom": "^26.1.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vitest": "^3.2.3"
   },
   "name": "adv",
   "packageManager": "yarn@1.22.22",
