--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@angular/build": "^20.0.2",
     "@angular/cli": "^20.0.2",
     "@angular/compiler-cli": "^20.0.3",
-    "@types/node": "^24.0.0",
+    "@types/node": "^24.0.1",
     "@vitest/browser": "^3.2.3",
     "angular-eslint": "^20.0.0",
     "eslint": "^9.28.0",
     "jsdom": "^26.1.0",
-    "typescript": "~5.8.3",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.0",
     "vite": "^6.3.5",
     "vitest": "^3.2.3"
