--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-eslint": "^20.0.0",
     "eslint": "^9.28.0",
     "jsdom": "^26.1.0",
+    "playwright": "^1.53.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.0",
     "vite": "^6.3.5",
