Disable auto-tests from CI - at least for now.

--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -34,7 +34,7 @@ jobs:
         run: yarn --frozen-lockfile
 
       - name: run tests
-        run: yarn auto-test
+        run: echo yarn auto-test disabled
 
       - name: regular build
         run: yarn build
