--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "lint": "ng lint",
     "ng": "ng",
     "start": "ng serve",
-    "test": "ng test",
+    "test": "ng test --browsers=chromium",
     "watch": "ng build --watch --configuration development"
   },
   "version": "0.0.0"
