Start to get debugging tests running - no success so far!

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,21 @@
       "type": "chrome",
       "url": "http://localhost:4200/",
       "userDataDir": "${workspaceFolder}/.vscode/chrome"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Test",
+      "runtimeExecutable": "yarn",
+      "runtimeArgs": ["vitest", "run", "src/**/*.spec.ts"],
+      "autoAttachChildProcesses": true,
+      "smartStep": true,
+      "skipFiles": ["<node_internals>/**"],
+      "sourceMaps": true,
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ]
     }
   ]
 }
