--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^9.31.0",
     "jsdom": "^26.1.0",
     "playwright": "^1.54.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.37.0",
     "vite": "^7.0.5",
