--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,9 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
     "packageManager": "yarn",
-    "schematicCollections": ["angular-eslint"]
+    "schematicCollections": [
+      "angular-eslint"
+    ]
   },
   "newProjectRoot": "projects",
   "projects": {
@@ -44,7 +46,9 @@
             "index": "src/index.html",
             "inlineStyleLanguage": "scss",
             "outputPath": "dist/adv",
-            "polyfills": ["zone.js"],
+            "polyfills": [
+              "zone.js"
+            ],
             "scripts": [],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
@@ -59,7 +63,10 @@
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
           }
         },
         "serve": {
@@ -73,14 +80,6 @@
             }
           },
           "defaultConfiguration": "development"
-        },
-        "test": {
-          "builder": "@angular/build:unit-test",
-          "options": {
-            "buildTarget": "::development",
-            "runner": "vitest",
-            "tsConfig": "tsconfig.spec.json"
-          }
         }
       },
       "prefix": "app",
