--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@angular/cli": "^20.3.10",
     "@angular/compiler-cli": "^20.3.11",
     "@types/node": "^24.10.1",
-    "@vitest/browser": "^3.2.4",
+    "@vitest/browser": "^4.0.8",
+    "@vitest/browser-playwright": "^4.0.8",
     "angular-eslint": "^20.6.0",
     "eslint": "^9.39.1",
     "jsdom": "^27.2.0",
@@ -28,7 +29,7 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.2",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.8"
   },
   "name": "adv",
   "packageManager": "yarn@1.22.22",
